--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,21 +32,27 @@
 
     <LinearLayout
         android:id="@+id/fragment_container"
-        android:layout_width="244dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="192dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <fragment
-            android:id="@+id/frag_container"
-            android:name="com.reservation.myapplication.MainFragment"
-            android:layout_width="326dp"
-            android:layout_height="321dp" />
+            android:id="@+id/listFragment"
+            android:name="com.reservation.myapplication.ListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <fragment
+            android:id="@+id/viewerFragment"
+            android:name="com.reservation.myapplication.ViewerFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
