방문포장 기능_ 1. 메뉴판 업로드 중 2. 주문내역확인 팝업 액티비티

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/food1" />
+            android:src="@drawable/pupatbong" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -60,12 +60,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/food3" />
+            android:src="@drawable/chilinonga" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/food4" />
+            android:src="@drawable/nuapotnaman" />
 
         <ImageView
             android:layout_width="match_parent"
