--- a/app/src/main/res/layout/fragment_imageviewer.xml
+++ b/app/src/main/res/layout/fragment_imageviewer.xml
@@ -9,6 +9,6 @@
         android:id="@+id/viewer_imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/food1" />
+        app:srcCompat="@drawable/pupatbong" />
 
 </LinearLayout>
