reservation function_ sending reserve message to boss

--- a/app/src/main/res/layout/activity_reserve.xml
+++ b/app/src/main/res/layout/activity_reserve.xml
@@ -108,7 +108,7 @@
         app:layout_constraintVertical_bias="0.060000002" />
 
     <EditText
-        android:id="@+id/reserve_personname"
+        android:id="@+id/reserve_Customer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#730101"
@@ -128,7 +128,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/reserve_personname"
+        app:layout_constraintStart_toStartOf="@+id/reserve_Customer"
         app:layout_constraintTop_toTopOf="@+id/textView5"
         />
 
