--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -9,12 +9,12 @@
 
     <Button
         android:id="@+id/list_button1"
-        android:text="왕새우 팟타이"
-        android:layout_column="0"
         android:layout_row="0"
         android:layout_rowSpan="2"
+        android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill"
+        android:text="면류"
 
         />
 
