--- a/app/src/main/res/layout/activity_reserve.xml
+++ b/app/src/main/res/layout/activity_reserve.xml
@@ -13,7 +13,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="카카오톡 인증 먼저 부탁드립니다"
+        android:text="모두 입력해주셔야 합니다"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
 
     <EditText
         android:id="@+id/edittext_Ask"
-        android:layout_width="0dp"
+        android:layout_width="411dp"
         android:layout_height="102dp"
         android:background="#FFFFFF"
         android:backgroundTint="#FFFFFF"
@@ -31,10 +31,8 @@
         android:textColor="#000000"
         android:textColorHint="#DADADA"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datePicker"
-        app:layout_constraintVertical_bias="0.04000002" />
+        app:layout_constraintTop_toBottomOf="@+id/date_button"
+        app:layout_constraintVertical_bias="0.00999999" />
 
     <Button
         android:id="@+id/enter_button"
@@ -57,7 +55,7 @@
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittext_Ask"
-        app:layout_constraintVertical_bias="0.120000005" />
+        app:layout_constraintVertical_bias="0.110000014" />
 
     <CheckBox
         android:id="@+id/checkbox2"
@@ -69,7 +67,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/checkbox1"
         app:layout_constraintTop_toBottomOf="@+id/checkbox1"
-        app:layout_constraintVertical_bias="0.17000002" />
+        app:layout_constraintVertical_bias="0.13999999" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -93,20 +91,6 @@
         app:layout_constraintVertical_bias="0.04000002"
         tools:layout_editor_absoluteX="74dp" />
 
-    <DatePicker
-        android:id="@+id/datePicker"
-        android:layout_width="222dp"
-        android:layout_height="43dp"
-        android:datePickerMode="spinner"
-        android:spinnersShown="true"
-        android:startYear="2021"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/reserve_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/reserve_spinner"
-        app:layout_constraintVertical_bias="0.060000002" />
-
     <EditText
         android:id="@+id/reserve_Customer"
         android:layout_width="wrap_content"
@@ -129,8 +113,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/reserve_Customer"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
-        />
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView5"
@@ -143,5 +126,37 @@
         app:layout_constraintStart_toStartOf="@+id/reserve_name"
         app:layout_constraintTop_toBottomOf="@+id/reserve_name"
         app:layout_constraintVertical_bias="0.060000002" />
+
+    <Button
+        android:id="@+id/date_button"
+        android:layout_width="91dp"
+        android:layout_height="47dp"
+        android:text="날짜 선택"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/reserve_spinner"
+        app:layout_constraintTop_toBottomOf="@+id/reserve_spinner"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/time_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="시간선택"
+        app:layout_constraintBottom_toBottomOf="@+id/date_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintStart_toEndOf="@+id/date_button"
+        app:layout_constraintTop_toTopOf="@+id/date_button" />
+
+    <TextView
+        android:id="@+id/reserve_finalView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/enter_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkbox2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
