--- a/app/src/main/res/layout/activity_reserve.xml
+++ b/app/src/main/res/layout/activity_reserve.xml
@@ -49,7 +49,7 @@
         android:id="@+id/isChecked1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5명 이상입니다"
+        android:text="예약 내용을 확인했습니다"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
